--- a/crates/afterburner-core/Cargo.toml
+++ b/crates/afterburner-core/Cargo.toml
@@ -4,3 +4,6 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+tracing = { workspace = true }
+tracing-test = { workspace = true }
+thiserror = { workspace = true }
