--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,20 @@
 [workspace]
 resolver = "2"
-members = ["crates/afterburner-core", "crates/afterburner-cpu", "crates/afterburner-rustgpu"]
+members = [
+    "crates/afterburner-core",
+    "crates/afterburner-cpu",
+    "crates/afterburner-rustgpu",
+    "crates/afterburner-rustgpu-shaders",
+]
+
+# Compile build-dependencies in release mode with
+# the same settings as regular dependencies.
+[profile.release.build-override]
+opt-level = 3
+codegen-units = 16
+
+[profile.dev.build-override]
+opt-level = 3
 
 [workspace.package]
 name = "afterburner"
@@ -11,3 +25,8 @@ edition = "2021"
 tracing = "0.1"
 tracing-test = "0.2"
 thiserror = "2"
+spirv-builder = "0.9"
+spirv-std = "0.9"
+wgpu = "23"
+smol = "2"
+bytemuck = "1"
