--- a/crates/afterburner-rustgpu/Cargo.toml
+++ b/crates/afterburner-rustgpu/Cargo.toml
@@ -5,10 +5,7 @@ edition.workspace = true
 
 [dependencies]
 afterburner-core = { path = "../afterburner-core" }
-wgpu = { workspace = true }
+wgpu = { workspace = true, features = ["spirv", "vulkan-portability"] }
 smol = { workspace = true }
 bytemuck = { workspace = true }
 thiserror = { workspace = true }
-
-[build-dependencies]
-spirv-builder = { workspace = true }
