--- a/crates/shaders/shaders/Cargo.toml
+++ b/crates/shaders/shaders/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "afterburner-rustgpu-shaders"
-version.workspace = true
-edition.workspace = true
+name = "shaders"
+version = "0.1.0"
+edition = "2021"
 
 [lib]
 crate-type = ["dylib"]
