--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,6 @@
 [workspace]
 resolver = "2"
-members = [
-    "crates/afterburner-core",
-    "crates/afterburner-cpu",
-    "crates/afterburner-rustgpu",
-]
+members = ["crates/afterburner-core", "crates/afterburner-rustgpu"]
 exclude = ["crates/shaders", "crates/shaders/shaders", "crates/shaders/builder"]
 
 [workspace.package]
@@ -19,3 +15,4 @@ thiserror = "2"
 wgpu = "0.19"
 smol = "2"
 bytemuck = "1"
+lazy_static = "1"
