--- a/crates/afterburner-rustgpu/Cargo.toml
+++ b/crates/afterburner-rustgpu/Cargo.toml
@@ -9,3 +9,4 @@ wgpu = { workspace = true, features = ["spirv", "vulkan-portability"] }
 smol = { workspace = true }
 bytemuck = { workspace = true }
 thiserror = { workspace = true }
+lazy_static = { workspace = true }
