--- a/afterburner/afterburner-rustgpu/Cargo.toml
+++ b/afterburner/afterburner-rustgpu/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 
 [dependencies]
 afterburner-core = { path = "../afterburner-core" }
+afterburner-rustgpu-shared = { path = "../afterburner-rustgpu-shared" }
 wgpu = { workspace = true, features = ["spirv", "vulkan-portability"] }
 smol = { workspace = true }
 bytemuck = { workspace = true }
