--- a/shaders/afterburner-shaders/Cargo.toml
+++ b/shaders/afterburner-shaders/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "afterburner-shaders"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [lib]
 crate-type = ["dylib"]
