--- a/shaders/builder/Cargo.toml
+++ b/shaders/builder/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "afterburner-ai-builder"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 spirv-builder = { workspace = true }
