--- a/shaders/rust-toolchain.toml
+++ b/shaders/rust-toolchain.toml
@@ -1,3 +1,3 @@
 [toolchain]
-channel = "nightly-2023-05-27"
-components = ["rust-src", "rustc-dev", "llvm-tools-preview"]
+channel = "nightly-2025-06-23"
+components = ["rust-src", "rustc-dev", "llvm-tools"]
