--- a/afterburner/Cargo.toml
+++ b/afterburner/Cargo.toml
@@ -20,4 +20,4 @@ wgpu = "24"
 smol = "2"
 bytemuck = "1"
 lazy_static = "1"
-spirv-std = "0.9"
+spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git", branch = "main" }
